Styled background and buttons, fixed alignment issues with grid

--- a/style.css
+++ b/style.css
@@ -6,72 +6,69 @@ html {
     margin: 0;
 }
 
-h1 {
-    margin: 30px auto;
+body {
+    background: #F1D9FF;
+    color: #6A4680;
 }
 
-.wrapper {
+h1 {
+    margin: 30px 0;
+    text-align: center;
+}
+
+.calculator {
+    width: 300px;
+    border: 3px solid #786C80;
+    border-radius: 10px;
+    margin: 0 auto;
+}
+
+.calculator-screen {
     display: grid;
-    justify-content: center;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 5px 5px;
+    padding: 20px;
 }
 
 .answer {
-    grid-area: answer;
+    grid-column: 1 / span 4;
     justify-self: end;
-    align-self: center;
-    /* padding-right: 5px; */
+    height: 50px;
 }
 
-.logo {
-    grid-area: logo;
-    align-self: center;
-    justify-self: center;
+.plus {
+    grid-column-start: 4;
+    grid-row-start: 2;
 }
 
-.operators {
-    grid-area: operators;
-    grid-gap: 5px 5px;
-    align-self: stretch;
-    justify-self: end;
-
-    display: flex;
-    flex-direction: column;
+.minus {
+    grid-column-start: 4;
+    grid-row-start: 3;
 }
 
-.operator {
-    flex: 1;
+.times {
+    grid-column-start: 4;
+    grid-row-start: 4;
 }
 
-.numbers {
-    grid-area: numbers;
-    grid-gap: 5px 5px;
-    align-self: stretch;
-    justify-self: center;
-
-    display: flex;
-    flex-wrap: wrap;
+.divide {
+    grid-column-start: 4;
+    grid-row-start: 5;
 }
 
-.number {
-    flex: 1;
+.equals {
+    grid-column: 1 / span 4;
+    grid-row-start: 6;
 }
 
-.clr {
-    grid-area: clr;
+button[data-key] {
+    height: 50px;
+    background: rgba(0,0,0,0.1);
+    outline: none;
+    border: 1px solid #786C80;
+
 }
 
-.container {
-    display: grid;
-    grid-template-columns: 50px 50px 50px 50px;
-    grid-template-rows: 50px 50px 50px 50px 50px 50px;
-    grid-template-areas: 
-        "answer answer answer answer"
-        "logo logo clr operators"
-        "numbers numbers numbers operators"
-        "numbers numbers numbers operators"
-        "numbers numbers numbers operators"
-        "numbers numbers numbers operators";
-    padding: 10px;
-    border: 2px solid #DDDDDD;
-    justify-self: center;
+button[data-key].selected {
+    background: #D58CFF;
 }
